src/App.css
@import url(https://fonts.googleapis.com/css?family=Roboto:500);

.App {
  text-align: center;
  padding: 2% 5%;
}

.App * {
  box-sizing: border-box;
}

.container {
  background-color: #616e7d;
}

ul {
  padding: 0;
  list-style: none;
}

p {
  margin: 5px 0;
}

.card-header {
  background-color: #82bfab !important;

  font-weight: 700;
}

.card-body {
  background-color: #aad4c8;
}

.event-card {
  border: 2px solid #bdbaba !important;
  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
  transition: all 0.3s ease-in-out;
}

.event-card:hover {
  border: 2px solid #f3f3f3 !important;
  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
  transition: all 0.3s ease-in-out;
}

.event-btn {
  float: right;
}

.alert-info {
  margin-top: 20px;
}

.display-none {
  display: none;
}

.city {
  margin-top: 20px;
  width: 300px;
}

.custom-input:focus {
  border-color: #82bfab !important;
  box-shadow: 0 0 0 0.2rem #82bfab !important;
}

.custom-input {
  border: 1px solid #494949 !important;
}

.CitySearch {
  display: flex;
  flex-direction: column;
  flex-basis: 250px;
  max-width: 250px;
  margin: auto;
  position: relative;
  text-align: center;
}

.event {
  padding: 10px;
  margin-bottom: 10px;
  text-align: left;
  border-radius: 4px;
  position: relative;
}

.name {
  font-size: 18px;
  font-weight: 600;
}

.group-name {
  text-transform: uppercase;
  font-size: 14px;
}

.going,
.visibility {
  font-style: italic;
}

.description {
  overflow-x: hidden;
}

.numOfEvents {
  width: 80%;
  margin: 20px auto;
  text-align: center;
}

.citySearch-label {
  color: whitesmoke;
  font-weight: 700;
  margin-top: 10px;
}

.numOfEvents-label {
  color: whitesmoke;
  font-weight: 700;
}

.alert-heading.h4 {
  font-size: 1rem;
  font-weight: 400;
}

.alert {
  background-color: #f8d7da;
  border: 1px solid #f5c2c7;
  border-image: none 100% 1 0 stretch;
  border-radius: 0.375rem;
  color: #842029;
  margin-bottom: 1rem;
  padding: 1rem;
  position: relative;
  width: 250px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

.loader {
  border: 8px solid #f3f3f3;
  border-top: 8px solid #3498db;
  border-radius: 50%;
  width: 60px;
  height: 60px;
  animation: spin 2s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.data-vis-wrapper {
  display: flex;
  align-items: center;
  flex-direction: column;
}
.data-vis-wrapper .recharts-responsive-container {
  min-width: 100%;
  display: flex;
}
.recharts-surface {
  overflow: visible;
}

.login-button {
  color: #494949;
  text-transform: uppercase;
  text-decoration: none;
  background: #ffffff;
  padding: 20px;
  border: 4px solid #494949;
  display: inline-block;
  transition: all 0.4s ease 0s;
  min-width: 10rem;
  margin: 1rem;
}

.google-btn {
  width: 184px;
  height: 42px;
  margin: 1rem;
  background-color: #4285f4;
  border-radius: 2px;
  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
}
.google-btn:hover {
  box-shadow: 0 0 6px #4285f4;
}
.google-btn:active {
  background: #1669f2;
}
.google-icon-wrapper {
  position: absolute;
  margin-top: 1px;
  margin-left: 1px;
  width: 40px;
  height: 40px;
  border-radius: 2px;
  background-color: #fff;
}
.google-icon {
  position: absolute;
  margin-top: 11px;
  margin-left: -8px;
  width: 18px;
  height: 18px;
}

.display-block {
  display: block;
}

@media only screen and (min-width: 992px) {
  .data-vis-wrapper {
    flex-direction: row;
  }
  .data-vis-wrapper .recharts-responsive-container {
    flex-basis: 50%;
    max-width: 50%;
    min-width: auto;
    margin: 0 auto;
  }
}

